--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "easy-autocomplete": "^1.3.5"
+        "alpinejs": "^2.8.2",
+        "easy-autocomplete": "^1.3.5",
+        "sweetalert2": "^10.16.7"
     }
 }
